--- a/templates/catalog/home.html
+++ b/templates/catalog/home.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <!-- Hero Section -->
-<div class="hero min-h-[60vh] bg-gradient-to-r from-primary to-secondary">
+<div class="hero min-h-[60vh] bg-gradient-to-r from-orange-300 via-orange-500 to-pink-700 text-white">
+
     <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">Welcome to ChazeFashion</h1>
